# PathExplorer

./: CMakeLists.txt  ConstructGraph.hs  FindPin.cmake  PathExplorer.sln  README.md  analysis_functions.cc  analysis_functions.h  branch.cpp  branch.h  checkpoint.cpp  checkpoint.h  cmake_params.txt  draw_result.plot  instruction.cpp  instruction.h  instrumentation_functions.cc  instrumentation_functions.h  logging_functions.cc  logging_functions.h  path_explorer.cpp  pathexp.kdev4  pin.sh  proc_result.R  proc_total_result.R  resolving_functions.cc  resolving_functions.h  stuffs.cc  stuffs.h  tainting_functions.cc  tainting_functions.h  variable.cpp  variable.h
previous_version/: CMakeLists.txt  analysis_functions.cc  analysis_functions.h  branch.cpp  branch.h  checkpoint.cpp  checkpoint.h  cond_direct_instruction.cpp  cond_direct_instruction.h  exploring_graph.cpp  exploring_graph.h  instruction.cpp  instruction.h  instrumentation_functions.cc  instrumentation_functions.h  logging_functions.cc  logging_functions.h  operand.cpp  operand.h  path_explorer.cpp  path_explorer.h  resolving_functions.cc  stuffs.cc  stuffs.h  tainting_functions.cc  tainting_functions.h  variable.cpp  variable.h
reverse_execution_engine/: checkpoint.cpp  checkpoint.h
src/: CMakeLists.txt  main.cpp  main.h
src/analysis/: CMakeLists.txt  cbranch.cpp  cbranch.h  conditional_branch.cpp  conditional_branch.h  dataflow.cpp  dataflow.h  instruction.cpp  instruction.h  instruction_operand.cpp  instruction_operand.h  operand.cpp  operand.h
src/dataflow_analysis/: CMakeLists.txt  analysis.cpp  analysis.h  dataflow_graph.cpp  dataflow_graph.h  instruction.cpp  instruction.h  instruction_operand.cpp  instruction_operand.h
src/dbi/: CMakeLists.txt  analysing.cpp  analysing.h
src/engine/: CMakeLists.txt  checkpoint.cpp  checkpoint.h  fast_execution.cpp  fast_execution.h  reverse_execution.cpp  reverse_execution.h
src/instrumentation/: CMakeLists.txt  analysing.h  analyzer.cpp  analyzer.h  dbi.cpp  dbi.h  resolver.cpp  resolver.h  trace_analyzer.cpp  trace_analyzer.h  trace_resolver.cpp  trace_resolver.h
src/reverse_execution_engine/: CMakeLists.txt  checkpoint.cpp  checkpoint.h  engine.cpp  engine.h
src/utilities/: CMakeLists.txt  utils.cpp  utils.h
version_1/: CMakeLists.txt  FindPin.cmake  PathExplorer.pro  SimplifyExpGraph.hs  UsePin.cmake  branch.h  checkpoint.cpp  instrumentation_functions.cc  logging_functions.h  operand.cpp  pch.h  proc_total_result.R  rollbacking_functions.cpp  rollbacking_functions.h
version_1/src/: branch.h  common.h  cond_direct_instruction.cpp  cond_direct_instruction.h  instruction.cpp  instrumentation_functions.cc  logging_functions.cc  logging_functions.h  operand.h  parsing_helper.h  path_explorer.cpp  resolving_functions.cc  stuffs.cc  tainting_functions.cc
version_1/src/base/: branch.cpp  checkpoint.cpp  checkpoint.h  cond_direct_instruction.cpp  cond_direct_instruction.h  execution_dfa.cpp  execution_dfa.h  execution_path.cpp  execution_path.h  exp_graph.cpp  exp_graph.h  explorer_graph.cpp  explorer_graph.h  instruction.cpp  instruction.h  operand.cpp  operand.h
version_1/src/operation/: capturing_phase.cpp  capturing_phase.h  common.h  instrumentation.cpp  instrumentation.h  instrumentation_functions.cc  instrumentation_functions.cpp  instrumentation_functions.h  logging_functions.cc  logging_functions.h  resolving_functions.cc  resolving_functions.h  rollbacking_functions.cpp  rollbacking_functions.h  rollbacking_phase.cpp  rollbacking_phase.h  tainting_functions.cc  tainting_functions.cpp  tainting_functions.h  tainting_phase.cpp  tainting_phase.h
version_1/src/util/: stuffs.cc  stuffs.cpp  stuffs.h  tinyformat.h
version_2/src/: main.h
version_2/src/analysis/: cbranch.cpp  dataflow.cpp  dataflow.h  instruction.cpp  instruction.h
version_2/src/engine/: checkpoint.cpp
version_2/src/instrumentation/: analyzer.cpp  dbi.cpp  dbi.h  resolver.h
version_2/src/utilities/: utils.h
windows_version/: windows_version.vcxproj
windows_version_v10/PathExplorer/: PathExplorer.vcxproj  PathExplorer.vcxproj.filters
